chore: use URI for URL conversion to handle redirects properly